# AutoAvailability

./: .env.example  .gitignore  AutoHebdo.py  AutoMensuel.py  README.md  README_LEGACY.md  adjust_alarms.py  alarm_exporter.py  app.py  calculation.py  cert.pem  data_exporter.py  db_export.py  download_wps_history.py  email_send.py  generate_cert.py  hebdo_calc.py  key.pem  logger_config.py  main.py  manual_adjustments.json  pyproject.toml  results_grouper.py  sql_alarms.py  start_server.bat
backend/: api.py  main.py
config/: Alarmes List Norme RDS-PP_Tarec.xlsx  app_settings.json  manual_adjustments.json  scheduler_config.json
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  api.ts  main.tsx
frontend/src/components/: Header.tsx  Navbar.tsx  SourceAlarmTable.tsx
frontend/src/pages/: Alarms.tsx  Dashboard.tsx  DataIntegrity.tsx  FileManager.tsx  Logs.tsx  Settings.tsx
src/: adjust_alarms.py  calculation.py  config.py  data_exporter.py  email_send.py  hebdo_calc.py  integrity.py  logger_config.py  results_grouper.py  scheduler.py  settings_manager.py  validation_runner.py
tests/: test_completeness.py  test_integrity.py  test_integrity_params.py
