[project]
name = "autohebdo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pyodbc>=5.2.0",
    "python-dotenv>=1.1.0",
    "pywin32>=310",
    "rich>=14.0.0",
    "scipy>=1.15.2",
    "sqlalchemy>=2.0.40",
    "textual>=5.3.0",
    "tqdm>=4.67.1",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "pydantic>=2.10.0",
    "cryptography>=46.0.3",
    "apscheduler>=3.10.0",
]
